--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -23,12 +23,12 @@
         </div>
         <div class="form-control">
           <label for="password">password</label>
-          <input type="text" id="password" placeholder="Enter password">
+          <input type="password" id="password" placeholder="Enter password">
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="password2">password2</label>
-          <input type="text" id="password2" placeholder="Enter password2">
+          <input type="password" id="password2" placeholder="Enter password2">
           <small>Error message</small>
         </div>
         <button type="submit">Submit</button>
