--- a/custom-video-player/index.html
+++ b/custom-video-player/index.html
@@ -5,12 +5,26 @@
   <title>Custom Video Player</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/progress.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css" integrity="sha384-X8QTME3FCg1DLb58++lPvsjbQoCT9bp3MsUU3grbIny/3ZwUJkRNO8NPW6zqzuW9" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <h1>Custom Video Player</h1>
-  <video controls id="video" class="screen" src="videos/gone.mp4" poster="img/poster.png"></video>
-
+  <video 
+    id="video" 
+    class="screen" 
+    src="videos/video.mkv" 
+    poster="img/download.jpg">
+  </video>
+  <div class="controls">
+    <button id="play" class="btn">
+      <i class="fa fa-play fa-2x"></i>
+    </button>
+    <button id="stop" class="btn">
+      <i class="fa fa-stop fa-2x"></i>
+    </button>
+    <input id="progress" class="progress" type="range" min="0" max="100" step="0.1" value="0">
+    <span id="timestamp" class="timestamp">00:00</span>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
