Implement notification-message styling

--- a/hangman-game/index.html
+++ b/hangman-game/index.html
@@ -32,25 +32,16 @@
     </svg>
 
     <div class="wrong-letters-container">
-      <div id="wrong-letters">
-        <p>Wrong</p>
-        <span>e,r,t,y</span>
-      </div>
+      <div id="wrong-letters"></div>
     </div>
 
-    <div id="word" class="word">
-      <div class="letter">h</div>
-      <div class="letter">e</div>
-      <div class="letter">l</div>
-      <div class="letter">l</div>
-      <div class="letter">o</div>
-    </div>
+    <div id="word" class="word"></div>
   </div>
 
   <!-- container for ending message -->
   <div id="popup-container" class="popup-container">
     <div class="popup">
-      <h2 id="ending-message">You Won!</h2>
+      <h2 id="ending-message"></h2>
       <button id="play-button">Play Again</button>
     </div>
   </div>
