Implement player (play, pause, next, prev, setProgress)

--- a/music-player/index.html
+++ b/music-player/index.html
@@ -29,7 +29,7 @@
       ></audio>
 
       <div class="img-container">
-        <img src="img/cradles.png" alt="cover" />
+        <img id="cover" src="img/cradles.png" alt="cover" />
       </div>
 
       <div class="navigation">
