--- a/memory-cards/index.html
+++ b/memory-cards/index.html
@@ -17,7 +17,8 @@
       <i class="fas fa-trash"></i> Clear Cards
     </button>
 
-    <h1>Memory Cards
+    <h1>
+      Memory Cards
       <button id="show" class="btn btn-small">
         <i class="fas fa-plus"></i> Add New Card
       </button>
@@ -33,7 +34,9 @@
             <p>A programming language</p>
           </div>
         </div>
-        <div class="card">
+      </div>
+
+      <div class="card">
         <div class="inner-card">
           <div class="inner-card-front">
             <p>What is PHP?</p>
@@ -42,24 +45,24 @@
             <p>A programming language</p>
           </div>
         </div>
+      </div>
+    </div>
 
+    <div class="navigation">
+      <div id="prev" class="nav-button">
+        <i class="fas fa-arrow-left"></i>
       </div>
 
-      <div class="navigation">
-        <div id="prev" class="nav-button">
-          <i class="fas fa-arrow-left"></i>
-        </div>
+      <p id="current"></p>
 
-        <p id="current"></p>
-
-        <div id="nest" class="nav-button">
-          <i class="fas fa-arrow-right"></i>
-        </div>
+      <div id="nest" class="nav-button">
+        <i class="fas fa-arrow-right"></i>
       </div>
     </div>
 
     <div id="add-container" class="add-container">
-      <h1>Add New Card
+      <h1>
+        Add New Card
         <button id="hide" class="btn btn-small btn-ghost">
           <i class="fas fa-times"></i>
         </button>
