--- a/memory-cards/index.html
+++ b/memory-cards/index.html
@@ -58,7 +58,7 @@
 
       <p id="current"></p>
 
-      <div id="nest" class="nav-button">
+      <div id="next" class="nav-button">
         <i class="fas fa-arrow-right"></i>
       </div>
     </div>
