Lyrics-Search Add base styles

--- a/lyrics-search/index.html
+++ b/lyrics-search/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Lyrics Search</title>
   </head>
   <body>
     <header>
@@ -17,9 +18,13 @@
       </form>
     </header>
     <div class="container">
-      <ul id="search-result">
+      <ul class="search-result" id="search-result">
         <li>Results will be displayed here</li>
       </ul>
     </div>
+
+    <div class="container pagination"></div>
+
+    <script src="script.js"></script>
   </body>
 </html>
