Lyrics-Search Add song data search function

--- a/lyrics-search/index.html
+++ b/lyrics-search/index.html
@@ -21,6 +21,7 @@
       <ul class="search-result" id="search-result">
         <li>Results will be displayed here</li>
       </ul>
+      <button id="btn-more">More...</button>
     </div>
 
     <div class="container pagination"></div>
