Lyrics-search Add showing search result function

--- a/lyrics-search/index.html
+++ b/lyrics-search/index.html
@@ -17,14 +17,11 @@
         <button id="btn-search">Search</button>
       </form>
     </header>
-    <div class="container">
-      <ul class="search-result" id="search-result">
-        <li>Results will be displayed here</li>
-      </ul>
-      <button id="btn-more">More...</button>
+    <div class="container search-result centered" id="search-result">
+      <li>Results will be displayed here</li>
     </div>
 
-    <div class="container pagination"></div>
+    <div id="pagination" class="container centered"></div>
 
     <script src="script.js"></script>
   </body>
