Relaxer Add infinite animation loop of breathing

--- a/relaxer/index.html
+++ b/relaxer/index.html
@@ -13,7 +13,7 @@
 
       <p id="text">Breathe In!</p>
 
-      <div class="pointer-container">
+      <div id="pointer-container" class="pointer-container">
         <span class="pointer"></span>
       </div>
 
