--- a/breakout-game/index.html
+++ b/breakout-game/index.html
@@ -20,6 +20,6 @@
 
     <canvas id="canvas" width="800" height="600"></canvas>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
